Updated nurse interface

--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,12 @@ body {
   color: #3778A6;
 }
 
+/* Active link */
+.menu ul li a.active {
+  background: #e6f0ff;
+  color: #0056b3;
+}
+
 .main-content {
       flex: 1;
       padding: 0;
